Replace breeze components with flux

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    :root {
+        --color-accent: var(--color-lime-400);
+        --color-accent-content: var(--color-lime-600);
+        --color-accent-foreground: var(--color-lime-900);
+    }
+
+    .dark {
+        --color-accent: var(--color-lime-400);
+        --color-accent-content: var(--color-lime-400);
+        --color-accent-foreground: var(--color-lime-950);
+    }
+}
